--- a/scss/components/_graphs.scss
+++ b/scss/components/_graphs.scss
@@ -34,8 +34,6 @@ li:focus,
     color: #FFF;
 }
 
-
-
 .widget-container-half {
     width: 95vw;
 }
@@ -46,9 +44,8 @@ li:focus,
 /******************************/
 .traffic {
     padding-bottom: 2rem;
-    padding-left: .3rem;
-    padding-right: .3rem;
-    
+    padding-left: .5rem;
+    padding-right: .5rem;
 }
 
 
