--- a/scss/sections/_header.scss
+++ b/scss/sections/_header.scss
@@ -31,7 +31,7 @@ header {
 }
 
 .header h3 {
-    padding-right: .5rem;
+    align-self: center;
 }
 
 .bell-box {
