--- a/scss/sections/_main.scss
+++ b/scss/sections/_main.scss
@@ -26,7 +26,7 @@
 .main-header-search {
     display: flex;
     padding-top: .6rem;
-    padding-right: .5rem;
+    padding-right: .3rem;
     border-radius: 0 0 0 10px;
     background-color:#fcfafaf7;
     margin-left: auto;
@@ -36,7 +36,7 @@
 .main-header-search input {
     height: 1.6rem;
     display: inline-block;
-    max-width: 50%;
+    min-width: 40%;
     font-size: .8rem;
     margin-left: auto;
 } 
@@ -74,8 +74,6 @@
 .social-stats {
     border-top: 2px solid lightgray;
     padding-bottom: 0;
-    padding-left: 1rem;
-    padding-right: 1rem;
     margin-top: 2rem;
 }
 
@@ -142,8 +140,6 @@ div.social-text > p:nth-of-type(2) {
 .recent-activity {
     display: flex;
     flex-direction: column;
-    padding-left: 1rem;
-    padding-right: 1rem;
     border-top: 2px solid lightgray;
     margin-top: 2rem;
 }
@@ -190,8 +186,10 @@ div.member-text > p:first-child {
 .member-container > p {
     font-size: .7rem;
     margin-right: .3rem;
-    margin: auto .5rem auto auto;
+    margin-right: 0;
+    padding-right: .3rem;
     color: #5e5e5e;
+    align-self: center;
 }
 
 /******************************/
@@ -213,7 +211,9 @@ div.activity-text > p:first-child{
 .activity-container > span {
     font-size: 1rem;
     margin-right: .3rem;
-    margin: auto .5rem auto auto;
+    align-self: center;
+    margin-right: 0;
+    padding-right: .3rem;
     color: #2a63f5;
 }
 
@@ -229,8 +229,6 @@ div.activity-text > p:first-child{
 .message {
     margin: 1rem 0 1rem 0;
     border-top: 2px solid lightgray;
-    padding-left: 1rem;
-    padding-right: 1rem;
 }
 
 form {
@@ -280,8 +278,6 @@ textarea {
 
 .settings {
     margin: 1rem 0 1rem 0;
-    padding-left: .5rem;
-    padding-right: .5rem;
     justify-items: center;
     border-top: 2px solid lightgray;
 }
